wip: tree snap
